--- a/01-express-swagger/package.json
+++ b/01-express-swagger/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.2",
     "connect": "^3.7.0",
     "swagger-tools": "^0.10.4",
     "weather-js": "^2.0.0"
