--- a/08-iframe-event-passing/package.json
+++ b/08-iframe-event-passing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learn-node-express",
+  "name": "08-iframe-event-passing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "express": "^4.17.1"
   }
 }
