--- a/03-flyway-postgres/db-migration/flyway.conf
+++ b/03-flyway-postgres/db-migration/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://localhost:5432/test1
+flyway.url=jdbc:postgresql://localhost:5432/postgres
 flyway.user=postgres
-flyway.password=
+flyway.password=password
 flyway.locations=filesystem:./sql
