--- a/14-rate-limiting/package.json
+++ b/14-rate-limiting/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "event-stream": "^4.0.1",
+    "parallel-stream": "^1.1.2",
     "rate-limiter-flexible": "^2.2.1"
   }
 }
